--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "Export all extensions",
-    "version": "1.3",
+    "name": "Export links of all extensions",
+    "version": "1.4",
 
     "description": "Export name and url of all installed extensions in Google Chrome",
     "icons": {
