--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "name": "Export links of all extensions",
-    "version": "1.4",
+    "version": "1.5",
 
     "description": "Export name and url of all installed extensions in Google Chrome",
     "icons": {
@@ -12,7 +12,7 @@
 
     "offline_enabled": true,
 
-    "browser_action": {
+    "action": {
         "default_icon": "img/16.png",
         "default_popup": "popup.html"
     },
