--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,8 +13,11 @@
     "offline_enabled": true,
 
     "action": {
-        "default_icon": "img/16.png",
-        "default_popup": "popup.html"
+        "default_icon": "img/16.png"
+    },
+    
+    "background": {
+        "service_worker": "background.js"
     },
 
     "permissions": ["management"]
